event view in app

--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/App.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/App.xaml
@@ -171,6 +171,7 @@
             <!-- CONVERTERS -->
             <converters:CountToBoolConverter x:Key="CountToBoolConverter" />
             <converters:DatetimeConverter x:Key="DatetimeConverter" />
+            <converters:DateConverter x:Key="DateConverter" />
             <converters:ImageConverter x:Key="ImageConverter" />
             <converters:ItemTappedEventArgsConverter x:Key="ItemTappedEventArgsConverter" />
             <converters:InverseCountToBoolConverter x:Key="InverseCountToBoolConverter" />
