add link on dama image footer

--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -139,7 +139,7 @@
             <article class="row">
                 <section class="offset-sm-2 col-sm-4">
                     <div class="text-center footer-img">
-                        <img width="319px" src="~/images/flor-com-logo-1.png" />
+                        <a href="https://www.damanojornal.com" alt="Dama no Jornal" title="Dama no Jornal"><img width="319px" src="~/images/flor-com-logo-1.png" /></a>
                     </div>
                     <div class="esh-app-footer-text footer-text"> © Copyright 2018 Dama no Jornal | All Rights Reserved </div>
                 </section>
