--- a/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
@@ -48,8 +48,19 @@
                             <li role="separator" class="divider"></li>
                             <li><a asp-page="/ShopConfig/Index">Loja</a></li>
                         </ul>
-                    </li>                    
+                    </li>
                     <li><a asp-page="/Orders/Index">Encomendas</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Sabor com Tradição <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-area="Grocery" asp-page="/Categories/Index">Categorias</a></li>
+                            <li><a asp-area="Grocery" asp-page="/CatalogTypes/Index">Tipos de Produto</a></li>
+                            <li><a asp-area="Grocery" asp-page="/Catalogs/Index">Produtos</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
