--- a/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Delete.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Delete.cshtml
@@ -2,36 +2,30 @@
 @model Backoffice.Areas.Grocery.Pages.CatalogTypes.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Remover";
 }
 
-<h2>Delete</h2>
+<h2>Apagar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que quer apagar este registo?</h3>
 <div>
-    <h4>CatalogType</h4>
+    <h4>Tipo de Produto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogType.Code)
+            Código
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CatalogType.Code)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogType.Description)
+            Descrição
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CatalogType.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogType.PictureUri)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CatalogType.PictureUri)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CatalogType.Price)
+            Preço
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CatalogType.Price)
@@ -40,7 +34,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="CatalogType.Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Remover" class="btn btn-default" /> |
+        <a asp-page="./Index">Voltar para a Lista</a>
     </form>
 </div>
