--- a/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Edit.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Edit.cshtml
@@ -2,47 +2,42 @@
 @model Backoffice.Areas.Grocery.Pages.CatalogTypes.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
-<h4>CatalogType</h4>
+<h4>Tipo de Produto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CatalogType.Code" class="control-label"></label>
+                <label asp-for="CatalogType.Code" class="control-label">Código</label>
                 <input asp-for="CatalogType.Code" class="form-control" />
                 <span asp-validation-for="CatalogType.Code" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CatalogType.Description" class="control-label"></label>
+                <label asp-for="CatalogType.Description" class="control-label">Descrição</label>
                 <input asp-for="CatalogType.Description" class="form-control" />
                 <span asp-validation-for="CatalogType.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CatalogType.PictureUri" class="control-label"></label>
-                <input asp-for="CatalogType.PictureUri" class="form-control" />
-                <span asp-validation-for="CatalogType.PictureUri" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CatalogType.Price" class="control-label"></label>
+                <label asp-for="CatalogType.Price" class="control-label">Preço</label>
                 <input asp-for="CatalogType.Price" class="form-control" />
                 <span asp-validation-for="CatalogType.Price" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="CatalogType.Id" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Gravar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Voltar para a Lista</a>
 </div>
 
 @section Scripts {
