--- a/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                         <ul class="dropdown-menu">
                             <li><a asp-area="Grocery" asp-page="/Categories/Index">Categorias</a></li>
                             <li><a asp-area="Grocery" asp-page="/CatalogTypes/Index">Tipos de Produto</a></li>
-                            <li><a asp-area="Grocery" asp-page="/Catalogs/Index">Produtos</a></li>
+                            <li><a asp-area="Grocery" asp-page="/Products/Index">Produtos</a></li>
                         </ul>
                     </li>
                 </ul>
