remove description from produt; add grocery roles to users

--- a/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Create.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Novo Tipo de Produto";
 }
 
-<h2>Novo</h2>
+<h2>Sabor com Tradição - Novo</h2>
 
 <h4>Tipo de Produto</h4>
 <hr />
