--- a/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Details.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Details.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Detalhes";
 }
 
-<h2>Detalhes</h2>
+<h2>Sabor com Tradição - Detalhes</h2>
 
 <div>
     <h4>Tipo de Produto</h4>
