--- a/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Delete.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Delete.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Remover";
 }
 
-<h2>Apagar</h2>
+<h2>Sabor com Tradição - Apagar</h2>
 
 <h3>Tem a certeza que quer apagar este registo?</h3>
 <div>
