--- a/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Index.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/CatalogTypes/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Tipos de Produto";
 }
 
-<h2>Tipos de Produto</h2>
+<h2>Sabor com Tradição - Tipos de Produto</h2>
 
 <p>
     <a asp-page="Create">Inserir novo</a>
