--- a/src/Web/Backoffice/Areas/Grocery/Pages/Categories/Index.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/Categories/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Categorias";
 }
 
-<h2>Categorias</h2>
+<h2>Sabor com Tradição - Categorias</h2>
 
 <p>
     <a asp-page="./Create">Criar nova</a>
