--- a/src/Web/Backoffice/Areas/Grocery/Pages/Products/Create.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/Products/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Criar Novo Produto";
 }
 
-<h2>Criar</h2>
+<h2>Sabor com Tradição - Criar</h2>
 
 <h4>Produto</h4>
 <hr />
@@ -17,11 +17,6 @@
                 <label asp-for="CatalogItem.Name" class="control-label">Nome</label>
                 <input asp-for="CatalogItem.Name" class="form-control" />
                 <span asp-validation-for="CatalogItem.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CatalogItem.Description" class="control-label">Descrição</label>
-                <input asp-for="CatalogItem.Description" class="form-control" />
-                <span asp-validation-for="CatalogItem.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CatalogItem.Price" class="control-label">Preço</label>
