--- a/src/Web/Backoffice/Areas/Grocery/Pages/Products/Delete.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/Products/Delete.cshtml
@@ -2,14 +2,14 @@
 @model Backoffice.Areas.Grocery.Pages.Products.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Remover";
 }
 
-<h2>Delete</h2>
+<h2>Sabor com Tradição - Remover</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que queres apagar este registo?</h3>
 <div>
-    <h4>CatalogItem</h4>
+    <h4>Produto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,37 +19,37 @@
             @Html.DisplayFor(model => model.CatalogItem.Sku)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogItem.Name)
+            Nome
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CatalogItem.Name)
-        </dd>
+        </dd>        
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogItem.Description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CatalogItem.Description)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CatalogItem.Price)
+            Preço
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CatalogItem.Price)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogItem.PictureUri)
+            Imagem
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CatalogItem.PictureUri)
+            <img src="Model.CatalogItem.PictureUri" />
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogItem.CatalogType)
+            Categorias
+        </dt>
+        <dd>
+            @string.Join(",", Model.CatalogItem.CatalogCategories.Select(x => x.Category.Name))
+        </dd>
+        <dt>
+            Tipo de Produto
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CatalogItem.CatalogType.Code)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogItem.ShowOnShop)
+            Ativo
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CatalogItem.ShowOnShop)
@@ -58,7 +58,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="CatalogItem.Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Apagar" class="btn btn-default" /> |
+        <a asp-page="./Index">Voltar para a Lista</a>
     </form>
 </div>
