--- a/src/Web/Backoffice/Areas/Grocery/Pages/Products/Index.cshtml
+++ b/src/Web/Backoffice/Areas/Grocery/Pages/Products/Index.cshtml
@@ -2,10 +2,10 @@
 @model Backoffice.Areas.Grocery.Pages.Products.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Sabor com Tradição";
 }
 
-<h2>Mercado - Produtos</h2>
+<h2>Sabor com Tradição - Produtos</h2>
 
 <p>
     <a asp-page="Create">Criar novo produto</a>
@@ -19,9 +19,6 @@
             </th>
             <th>
                Nome
-            </th>
-            <th>
-                Descrição
             </th>
             <th>
                 Preço
@@ -49,9 +46,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
