--- a/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Pages/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <li><a asp-page="/Index">Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            Configurações <span class="caret"></span>
+                            Dama no Jornal <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a asp-page="/Category/Index">Categorias</a></li>
@@ -47,10 +47,10 @@
                             <li><a asp-page="/Products/Index">Produtos</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a asp-page="/ShopConfig/Index">Loja</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a asp-page="/Orders/Index">Encomendas</a></li>
                         </ul>
-                    </li>
-                    <li><a asp-page="/Orders/Index">Encomendas</a></li>
-                    <li role="separator" class="divider"></li>
+                    </li>                    
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             Sabor com Tradição <span class="caret"></span>
